# ScholarForge

./: .dockerignore  .env  .gitignore  AI_engine.py  CI_CD_GUIDE.md  Dockerfile  MIGRATION_GUIDE.md  MONITORING_GUIDE.md  TESTING_README.md  alembic.ini  chat_engine.py  database.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  readme.md  report_formats.py  requirements.txt  requires-core.txt  requires.txt  task.py  test_monitoring.sh  vercel.json  verify_search_logic.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: dd218e9b8804_initial_schema_migration.py
api/: index.py
backend/: AI_engine.py  chat_engine.py  council.py  database.py  index.py  logging_config.py  main.py  task.py
backend/agents/: artisan.py  inquisitor.py  legion.py  nexus.py  tools.py  utils.py
data/: scholarforge.db  scholarforge.db-shm  scholarforge.db-wal
frontend/static/css/: ai_assistant.css  council.css  layout.css  report_generator.css  search.css
frontend/static/js/: ai_assistant.js  global.js  layout.js  report_generator.js  report_generator.js.bak
frontend/templates/: ai_assistant.html  layout.html  report_generator.html  search.html
src/: __init__.py  config.py  crew.py
static/css/: ai_assistant.css  layout.css  report_generator.css  search.css
static/js/: ai_assistant.js  global.js  layout.js  report_generator.js  search.js
templates/: ai_assistant.html  ai_assistant_backup.html  layout.html  report_generator.html  search.html
tests/: __init__.py  conftest.py  test_api.py  test_conversions.py  test_database.py
